--- a/accounts/templates/accounts/lsi_list.html
+++ b/accounts/templates/accounts/lsi_list.html
@@ -124,7 +124,7 @@
                             </table>
                         </div>
                         <a href="{% url 'create_lsi' %}" class="btn btn-success">Добавить ЛСИ</a>
-                        <a href="{% url 'export_to_excel' %}?model_type=nomenclature" class="btn btn-secondary">Экспорт в Excel</a>
+                        <a href="{% url 'export_to_excel' %}?model_type=lsi" class="btn btn-secondary">Экспорт в Excel</a>
                     </div>
                 </div>
             </div>
