--- a/accounts/templates/accounts/home.html
+++ b/accounts/templates/accounts/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <style>
         body.dark-mode {
             background-color: #343a40;
@@ -75,7 +76,9 @@
             </div>
         </div>
     </div>
-    <button id="theme-toggle" class="btn btn-primary" style="position: fixed; top: 10px; right: 10px;">Переключить тему</button>
+    <button id="theme-toggle" class="btn btn-primary" style="position: fixed; top: 10px; right: 10px;">
+        <i class="fas fa-moon"></i>
+    </button>
     <script>
         document.getElementById('theme-toggle').addEventListener('click', function() {
             document.body.classList.toggle('dark-mode');
